# DocsCheck

./: .gitignore  pypi_token.txt  pyproject.toml  test.py
src/docs-check/: checker.py  main.py  utils.py
src/docsCheck/: Aspose.WordsforPythonvia.NET.lic  __init__.py  __main__.py  checker.py  main.py  runners.py  utils.py
src/docsCheck/to_view/: Система_для_автоматического_перелистывания_нот_на_планшете_актуальное.docx
